--- a/trunk/jigsaw/jigsaw/MainWindow.xaml
+++ b/trunk/jigsaw/jigsaw/MainWindow.xaml
@@ -20,8 +20,8 @@
         DataContext="{Binding Source={StaticResource viewModel}, Path=Schema}">
         
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="4*"/>
         </Grid.ColumnDefinitions>
         
         <Grid.Resources>
@@ -121,8 +121,7 @@
             
             <TreeView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <!--<WrapPanel MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Grid}}"/>-->
-                    <WrapPanel/>
+                    <WrapPanel MaxWidth="{Binding ActualWidth, RelativeSource={RelativeSource AncestorType=Grid}}"/>
                 </ItemsPanelTemplate>
             </TreeView.ItemsPanel>
             
